# astrochart

./: .envrc  .gitignore  README.md  local.yml  manage.py  production.yml  pyproject.toml
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
astrochart/: conftest.py
astrochart/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
astrochart/templates/: base.html
astrochart/users/: adapters.py  admin.py  apps.py  models.py  urls.py
astrochart/users/api/: serializers.py
astrochart/users/migrations/: 0001_initial.py
astrochart/users/tests/: test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt
